# Bitbeat

./: .gitignore  .learning_partner.md  README.md  docker-compose.yml  env.example  manifest  package-lock.json  package.json
.beads/: metadata.json
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: index.css
nginx/: Dockerfile  nginx.conf
services/auth/: Dockerfile  package-lock.json  package.json  tsconfig.json
services/auth/src/: db.ts  index.ts
services/auth/src/events/: publisher.ts
services/auth/src/models/: user.ts
services/auth/src/repositories/: user.repository.ts
services/auth/src/routes/: auth.routes.ts
services/auth/src/services/: auth.service.ts
services/auth/src/types/: responses.ts
services/gateway/: package-lock.json  package.json
services/gateway/src/: index.ts
services/gateway/src/clients/: gateway.client.ts
services/gateway/src/controllers/: auth.controller.ts
services/gateway/src/middleware/: gateway.middleware.ts
services/gateway/src/services/: gateway.core.ts  user.gateway.ts
services/gateway/src/types/: http-auth.ts
services/playlists/: Dockerfile  package-lock.json  package.json
services/playlists/src/: index.ts
services/songs/: Cargo.toml  Dockerfile
services/songs/src/: db.rs  main.rs
services/songs/src/handlers/: songs.rs
services/songs/src/models/: mod.rs  song.rs
services/songs/src/repositories/: mod.rs  song_repository.rs
services/songs/src/services/: file_service.rs  mod.rs  song_service.rs
services/streaming/: Cargo.toml  Dockerfile  rust-analyzer.toml  rustfmt.toml
