[package]
name    = "songs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web      = "4"
actix-multipart = "0.7"    # for audio file uploads

# Async runtime
tokio = { version = "1", features = ["full"] }

# MongoDB
mongodb = "3"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment variables
dotenvy = "0.15"

# RabbitMQ
lapin = "2"

# IDs
uuid = { version = "1", features = ["v4"] }

# Error handling
thiserror = "1"
futures = "0.3.32"
