[package]
name    = "streaming"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web   = "4"
actix-files = "0.6"    # for serving files with Range request support

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment variables
dotenvy = "0.15"

# Error handling
thiserror = "1"
